<resources>
    <string name="app_name">iotApp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">Welcome!</string>
    <string name="login_in_your_account">login in your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Sing up</string>
    <string name="projects">Projects</string>
    <string name="update">Update</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="dont_t_have_an_account">Dont\'t have an account? Sign up here</string>
    <string name="create_your_account">Create your account</string>
    <string name="active">Active :</string>
    <string name="create">Create</string>
    <string name="project">Project</string>
    <string name="room">Room</string>
    <string name="device">Device</string>
    <string name="charge">charge</string>
    <string name="signal">signal</string>
    <string name="status">status</string>
    <string name="type">type</string>
    <string name="Choose_type">choose type : </string>
    <string name="room_id">room id</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="success">Successfully built</string>
    <string name="invalid_data">Please enter the correct information</string>
    <string name="error_parsing">Error parsing information</string>
    <string name="error_empty">Please fill in the blanks</string>
    <string name="project_name">project name</string>
    <string name="error_data_wrong">Wrong username or password</string>
    <string name="room_not_found">Room not found!</string>
    <string name="success_delete">Successfully removed</string>
    <string name="success_updated">Successfully Updated</string>
    <string name="room_name">room name</string>
    <string name="device_name">device name</string>
    <string name="is_active">is Active</string>
    <string name="project_id">project id</string>
    <string name="first_project">You can create your first project using the + option</string>
    <string name="choose_project">Choose project : </string>
    <string name="str_default">Default</string>
</resources>