<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.Activity.LoginActivity">

    <ImageView
        android:id="@+id/img_iot"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/iot" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/gray"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_in_your_account"
        android:textColor="@color/gray"
        android:textSize="18dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="20sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="45dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/shape_edit_text"
                        android:elevation="5dp"
                        android:hint="@string/username"
                        android:paddingLeft="44dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/shape_img"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:src="@drawable/user" />
                </LinearLayout>

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="45dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/shape_edit_text"
                        android:elevation="5dp"
                        android:hint="@string/password"
                        android:paddingLeft="44dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/shape_img"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:src="@drawable/lock" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/dont_t_have_an_account" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sing_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_btn"
                android:elevation="3dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sing_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>