<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/search_bar"
    android:paddingTop="3dp"
    tools:context=".Ui.Activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="30dp"
            android:src="@drawable/add"
            app:fabSize="normal"
            app:maxImageSize="40dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_projects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/shape_txt"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp"
                        android:text="@string/projects"
                        android:textColor="@color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_projects"
                        android:layout_width="match_parent"
                        android:layout_height="180dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/shape_txt"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp"
                        android:text="@string/rooms"
                        android:textColor="@color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_rooms"
                        android:layout_width="match_parent"
                        android:layout_height="180dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/shape_txt"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp"
                        android:text="@string/devices"
                        android:textColor="@color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_devices"
                        android:layout_width="match_parent"
                        android:layout_height="180dp" />
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/linear_lottie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/not_found" />

            <TextView
                android:id="@+id/tv_firstPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/first_project"
                android:textColor="@color/gray"
                android:textSize="17sp" />
        </LinearLayout>

    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
